--- a/USTHConnect/app/build.gradle
+++ b/USTHConnect/app/build.gradle
@@ -37,19 +37,15 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'com.google.android.material:material:1.9.0'
 
-//    iplementation 'org.linphone:linphone-sdk-android:5.0+'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
-    implementation 'com.google.firebase:firebase-messaging:19.0.1'
-
-    implementation(platform("com.google.firebase:firebase-bom:33.7.0"))
+//    implementation libs.linphone.get()
 
     implementation 'androidx.media:media:1.2.0'
-    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
