--- a/USTHConnect/app/build.gradle
+++ b/USTHConnect/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
 
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
+    implementation 'org.linphone:linphone-sdk-android:5.0+'
+
 //    implementation libs.linphone.get()
 
     implementation 'androidx.media:media:1.2.0'
