Push noti even when app is closed

--- a/Calling_App/app/src/main/AndroidManifest.xml
+++ b/Calling_App/app/src/main/AndroidManifest.xml
@@ -99,7 +99,15 @@
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-        </service> <!-- This is to handle the PUSH_RECEIVED broadcast emitted by our SDK upon push reception -->
+        </service>
+        <!-- This is to handle the PUSH_RECEIVED broadcast emitted by our SDK upon push reception -->
+        <service
+            android:name=".CallService"
+            android:foregroundServiceType="phoneCall"
+            android:permission="android.permission.FOREGROUND_SERVICE"
+            android:exported="true" />
+
+
         <receiver
             android:name=".Linphone.PushBroadcastReceiver"
             android:exported="false"> <!-- True or False -->
